Fechando os testes unitarios

--- a/orderProcessor/pom.xml
+++ b/orderProcessor/pom.xml
@@ -86,6 +86,13 @@
 			<artifactId>spring-boot-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Dependência para MongoDB embutido nos testes -->
+		<dependency>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<version>4.16.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
