--- a/orderProcessor/src/test/resources/application-test.properties
+++ b/orderProcessor/src/test/resources/application-test.properties
@@ -1,3 +1,7 @@
+# Configuração do MongoDB para testes
+spring.data.mongodb.database=test
+spring.data.mongodb.port=27017
+
 # Configuração do RabbitMQ para testes
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
