--- a/orderProcessor/src/main/resources/application.properties
+++ b/orderProcessor/src/main/resources/application.properties
@@ -19,3 +19,6 @@ rabbitmq.routing.key=orderRoutingKey
 
 logging.level.org.springframework=INFO
 logging.level.br.com.atocf=DEBUG
+
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.access=unrestricted
