--- a/compose.yaml
+++ b/compose.yaml
@@ -53,5 +53,15 @@ services:
       - mongodb
       - rabbitmq
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+
 volumes:
   mongo-data:
