--- a/orderProcessor/src/main/resources/application.properties
+++ b/orderProcessor/src/main/resources/application.properties
@@ -22,3 +22,6 @@ logging.level.br.com.atocf=DEBUG
 
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.access=unrestricted
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
