--- a/compose.yaml
+++ b/compose.yaml
@@ -31,6 +31,17 @@ services:
       timeout: 5s
       retries: 3
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
   order-processor:
     build:
       context: ./orderProcessor
@@ -49,9 +60,12 @@ services:
       SPRING_RABBITMQ_PORT: 5672
       SPRING_RABBITMQ_USERNAME: admin
       SPRING_RABBITMQ_PASSWORD: inicial1234
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
     depends_on:
       - mongodb
       - rabbitmq
+      - redis
 
   prometheus:
     image: prom/prometheus:latest
