--- a/orderProcessor/pom.xml
+++ b/orderProcessor/pom.xml
@@ -123,6 +123,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<!-- Redisson -->
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson-spring-boot-starter</artifactId>
+			<version>3.37.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
