--- a/order-deployment.yaml
+++ b/order-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: order-processor
 spec:
-  replicas: 10
+  replicas: 3
   selector:
     matchLabels:
       app: order-processor
@@ -13,6 +13,10 @@ spec:
     metadata:
       labels:
         app: order-processor
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: "/actuator/prometheus"
+        prometheus.io/port: "8090"
     spec:
       containers:
         - name: order-processor
@@ -39,16 +43,9 @@ spec:
             - name: SPRING_RABBITMQ_PASSWORD
               value: inicial1234
             - name: SPRING_REDIS_HOST
-              value: redis-service
+              value: redis
             - name: SPRING_REDIS_PORT
               value: "6379"
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "500m"
-            limits:
-              memory: "1024Mi"
-              cpu: "1000m"
           livenessProbe:
             httpGet:
               path: /actuator/health
@@ -61,17 +58,13 @@ spec:
               port: 8090
             initialDelaySeconds: 30
             periodSeconds: 10
-          startupProbe:
-            httpGet:
-              path: /actuator/health
-              port: 8090
-            failureThreshold: 30
-            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: order-processor-service
+  labels:
+    app: order-processor
 spec:
   selector:
     app: order-processor
