Ajustes para melhoria para garantir que nao tenha duplicidade

--- a/orderProcessor/src/test/resources/application-test.properties
+++ b/orderProcessor/src/test/resources/application-test.properties
@@ -1,18 +1,18 @@
-# Configuração do MongoDB para testes
+# ConfiguraÃ§Ã£o do MongoDB para testes
 spring.data.mongodb.database=test
 spring.data.mongodb.port=27017
 
-# Configuração do RabbitMQ para testes
+# ConfiguraÃ§Ã£o do RabbitMQ para testes
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=test-user
 spring.rabbitmq.password=test-password
 
-# Configuração da fila e routing (RabbitMQ)
+# ConfiguraÃ§Ã£o da fila e routing (RabbitMQ)
 rabbitmq.queue.name=testOrderQueue
 rabbitmq.exchange.name=testOrderExchange
 rabbitmq.routing.key=testOrderRoutingKey
 
-# Configuração de logs para testes
+# ConfiguraÃ§Ã£o de logs para testes
 logging.level.org.springframework=WARN
 logging.level.br.com.atocf=DEBUG
