--- a/orderProcessor/src/test/resources/application-test.properties
+++ b/orderProcessor/src/test/resources/application-test.properties
@@ -1,3 +1,9 @@
+spring.application.name=order-processor-test
+
+# Desabilita o Redis
+spring.data.redis.host=none
+spring.data.redis.port=0
+
 # Configuração do MongoDB para testes
 spring.data.mongodb.database=test
 spring.data.mongodb.port=27017
