Tentando ajustar o teste unitario devido a config do redis

--- a/orderProcessor/src/test/resources/application-test.properties
+++ b/orderProcessor/src/test/resources/application-test.properties
@@ -4,21 +4,21 @@ spring.application.name=order-processor-test
 spring.data.redis.host=none
 spring.data.redis.port=0
 
-# ConfiguraÃ§Ã£o do MongoDB para testes
+# Configuração do MongoDB para testes
 spring.data.mongodb.database=test
 spring.data.mongodb.port=27017
 
-# ConfiguraÃ§Ã£o do RabbitMQ para testes
+# Configuração do RabbitMQ para testes
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=test-user
 spring.rabbitmq.password=test-password
 
-# ConfiguraÃ§Ã£o da fila e routing (RabbitMQ)
+# Configuração da fila e routing (RabbitMQ)
 rabbitmq.queue.name=testOrderQueue
 rabbitmq.exchange.name=testOrderExchange
 rabbitmq.routing.key=testOrderRoutingKey
 
-# ConfiguraÃ§Ã£o de logs para testes
+# Configuração de logs para testes
 logging.level.org.springframework=WARN
 logging.level.br.com.atocf=DEBUG
