--- a/compose.yaml
+++ b/compose.yaml
@@ -67,15 +67,22 @@ services:
       - rabbitmq
       - redis
 
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
+  order-query:
+    build:
+      context: ./orderQuery  # Ajuste para o diretório correto do order-query
+      dockerfile: Dockerfile
+    image: order-query:latest
+    container_name: order-query
     ports:
-      - "9090:9090"
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
+      - "8092:8092"
+    environment:
+      SPRING_PROFILES_ACTIVE: production
+      SPRING_DATA_MONGODB_HOST: mongodb
+      SPRING_DATA_MONGODB_PORT: 27017
+      SPRING_DATA_MONGODB_USERNAME: admin
+      SPRING_DATA_MONGODB_PASSWORD: inicial1234
+    depends_on:
+      - mongodb
 
 volumes:
   mongo-data:
